PracticeCourseCSSGrid/Blog-SPA/css/media-queries.css
@media (max-width: 900px) {
    .blogs-main-new {
        grid-template-columns: 1fr;
        grid-template-rows: 3fr;
    }
    .blogs-news-img-container {
        grid-row: 2;
        text-align: center;
    }
    .blogs-news-info-container {
        grid-column: 1;
        grid-row: 3;
    }
    .blogs-posts-container .post-container {
        max-width: 45%;
    }
    .projects-main-container {
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 2fr;
    }
    .profile-main-container .profile-container {
        display: block;
    }
}

@media (max-width: 600px) {
    .blogs-posts-container .post-container {
        max-width: 95%;
    }
    .projects-main-container {
        grid-template-columns: 1fr;
        padding-bottom: 150px;
    }
}

